--- a/To Do List/todo.css
+++ b/To Do List/todo.css
@@ -1,5 +1,5 @@
 body{
-    background-color: azure;
+    background-color: hsl(49, 44%, 62%);
 }
 
 h1{
@@ -33,6 +33,8 @@ form button{
 }
 
 #addTask{
+    color: hsla(0, 0%, 100%, 0.815);
+    border: none;
     border-radius: 5px 5px;
     background-color: rgb(40, 255, 40);
     transition: background-color 1s ease;
@@ -44,18 +46,15 @@ form button{
     background-color: rgb(17, 114, 17);
 }
 
-#removeTask{
+#removeAll{
+    color: hsla(0, 0%, 100%, 0.815);
+    border: none;
     border-radius: 5px 5px;
     background-color: rgb(255, 34, 34);
     transition: background-color 1s ease;
     cursor: pointer;
 }
 
-#removeTask:hover{
+#removeAll:hover{
     background-color: rgb(102, 14, 14);
-}
-
-p{
-    font-size: 2em;
-    text-align: center;
 }
