--- a/Portfolio/resume.css
+++ b/Portfolio/resume.css
@@ -1,55 +1,42 @@
 body{
-    background-color: rgba(13, 37, 72, 0.76);
+    background-color: hsl(0, 0%, 30%);
     scroll-behavior: smooth;
 }
 
 h1{
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
-    text-shadow: 2px 2px #ffffff;
     font-weight: bold;
     font-size: 4em;
 }
 
-#navBar{
-    background-color: hsla(0, 2%, 18%, 0.623);
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    margin-bottom: 25%;
-}
-
-#navBar button{
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 1.5rem;
-    font-weight: bold;
-    background-color: hsla(0, 0%, 37%, 0.459);
-    padding: 10px 20px;
-    width: 100%;
-    border: 1px black solid;
-    cursor: pointer;
-    color: hsl(224, 87%, 42%);
-    transition: background-color 0.75s ease;
-    transition: color 0.75s ease;
-}
-
-div{
-
-}
-
 #description{
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    display: flex;
+    justify-content: left;
+    flex-direction: column;
+    font-family: Georgia, Times, 'Times New Roman', serif;
     font-size: 1.25em;
-    
+    padding-bottom: 5px;
 }
 
-#myAbout:hover{
-    background-color: hsla(0, 0%, 0%, 0.671);
-    color: rgb(255, 255, 255);
+#projects-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    padding: 25px;
+    justify-items: center;
 }
 
-#myProjects:hover{
-    background-color: hsla(0, 0%, 0%, 0.671);
-    color: rgb(255, 255, 255);
+#projects-container button{
+    font-size: 1.5rem;
+    border: 1px solid hsl(0, 0%, 75%);    
+    border-radius: 10px 10px;
+    background-color: hsl(0, 0%, 100%);
+    cursor: pointer;
+    transition: background-color 0.5s ease;
+    width: 200px;
 }
 
+#projects-container button:hover{
+    background-color: hsl(0, 0%, 45%);
+}
